# linear-rnn

./: .gitignore  README.md  pyproject.toml
kernels/: softmax.py
linear_rnn/benchmarking/: rnn_scan.py  rnn_scan_efficiency.py  rnn_scan_precision.py
linear_rnn/benchmarking/results/rnn_scan/: rnn_scan_efficiency.csv  rnn_scan_performance.csv
linear_rnn/reference/: scan.py
linear_rnn/triton/: associative_rnn_scan.py  associative_scan_diag_a.py  naive_associative_rnn_scan.py  sequential_rnn_scan.py  sequential_scan_block_diag_a.py  sequential_scan_diag_a.py
linear_rnn/utils/: utils.py
notebooks/: rnn_scan_experiments.ipynb
