[tool.poetry]
name = "linear-rnn"
version = "0.1.0"
description = "Triton implementation for linear RNNs"
authors = ["Tushaar Gangavarapu <tg352@cornell.edu>"]
repository = "https://github.com/TushaarGVS/linear-rnn"
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0.1"
matplotlib = "^3.8.4"
triton = { git = "https://github.com/openai/triton.git", subdirectory = "python" }
numpy = "^1.26.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.autopep8]
aggressive = 1
max_line_length = 120
